--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_CXX_STANDARD 17)
 add_compile_options(-O3)
 
 add_subdirectory(dod_1)
+add_subdirectory(dod_1b)
 add_subdirectory(dod_2)
 add_subdirectory(dod_3)
 
