--- a/dod_1b/CMakeLists.txt
+++ b/dod_1b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.14)
 
-project(dod_1a VERSION 1.0)
+project(dod_1b VERSION 1.0)
 
 FetchContent_Declare(googletest
    GIT_REPOSITORY https://github.com/google/googletest.git
